tests/ui/typeck/return-unsized-coercion.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/return-unsized-coercion.rs:3:15
   |
LL | fn digit() -> str {
   |               ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = note: the return type of a function must have a statically known size

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
